<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:theme="@style/Theme.Dashlane.NoActionBar"
    tools:ignore="ButtonStyle"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/container_agnostic_neutral_standard"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp"
        android:textAppearance="?textAppearanceHeadline6"
        android:textColor="@color/text_neutral_catchy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/csv_import_title_one"
        />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <com.dashlane.ui.widgets.view.MultiColumnRecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="gone"
            app:fastScrollEnabled="true"
            app:fastScrollHorizontalThumbDrawable="@drawable/fastscroll_thumb_selector"
            app:fastScrollHorizontalTrackDrawable="@drawable/fastscroll_line_selector"
            app:fastScrollVerticalThumbDrawable="@drawable/fastscroll_thumb_selector"
            app:fastScrollVerticalTrackDrawable="@drawable/fastscroll_line_selector"
            />

    </FrameLayout>

    <com.dashlane.ui.activities.intro.IntroButtonBarLayout
        android:id="@+id/button_bar"
        style="?buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        android:elevation="8dp"
        android:gravity="bottom"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/secondary_cta"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:lines="1"
            android:visibility="invisible"
            tools:text="@string/csv_import_secondary_cta"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/primary_cta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:visibility="invisible"
            tools:text="@string/csv_import_primary_cta"
            tools:visibility="visible"
            />

    </com.dashlane.ui.activities.intro.IntroButtonBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>